--- a/package.json
+++ b/package.json
@@ -5,14 +5,12 @@
   "main": "index.mjs",
   "type": "module",
   "scripts": {
-    "build": "node esbuild.config.mjs",
-    "dev:server": "nodemon --config nodemon.server.json index.mjs",
-    "dev:react": "nodemon --config nodemon.react.json esbuild.config.mjs",
+    "start": "nodemon --config nodemon.server.json index.mjs",
     "asbuild:debug": "asc assembly/index.ts --target debug",
     "asbuild:release": "asc assembly/index.ts --target release",
     "asbuild": "npm run asbuild:debug && npm run asbuild:release",
-    "test": "node tests",
-    "=========== SERVICES ===========": ""
+    "virtualDom": "nodemon --config nodemon.react.json esbuild.config.mjs",
+    "test": "node tests"
   },
   "keywords": [],
   "author": "",
