--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "esbuild-plugin-polyfill-node": "^0.2.0",
     "esbuild-sass-plugin": "^2.8.0",
     "fs-extra": "^11.1.1",
+    "gulp": "^4.0.2",
     "nodemon": "^2.0.22",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
