--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "asbuild:debug": "asc assembly/index.ts --target debug",
     "asbuild:release": "asc assembly/index.ts --target release",
     "asbuild": "npm run asbuild:debug && npm run asbuild:release",
-    "virtualDom": "nodemon --config nodemon.react.json esbuild.config.mjs",
-    "test": "node tests",
+    "build:service": "nodemon --config nodemon.service.json esbuild.config.mjs",
     "px2vw:welcomebook": "gulp px2vw --src ./services/welcomebook/src",
     "vw2px:welcomebook": "gulp vw2px --src ./services/welcomebook/src",
     "px2vw:rules": "gulp px2vw --src ./services/rules/src",
     "vw2px:rules": "gulp vw2px --src ./services/rules/src",
     "px2vw:this": "gulp px2vw --src ./docs",
-    "vw2px:this": "gulp vw2px --src ./docs"
+    "vw2px:this": "gulp vw2px --src ./docs",
+    "test": "node tests"
   },
   "keywords": [],
   "author": "",
