--- a/services/mkb/package.json
+++ b/services/mkb/package.json
@@ -46,6 +46,7 @@
     "jest-resolve": "^29.5.0",
     "jest-watch-typeahead": "^2.2.2",
     "jsdoc-ignore-code": "^1.0.1",
+    "jsx-to-html": "^1.1.0",
     "mini-css-extract-plugin": "^2.7.5",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-loader": "^7.1.0",
