--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "================== CSS ==================": "echo NODE",
     "px2vw:welcomebook": "gulp px2vw --src ./services/welcomebook/src",
     "vw2px:welcomebook": "gulp vw2px --src ./services/welcomebook/src",
-    "px2vw:rules": "gulp px2vw --src ./services/rules/src",
-    "vw2px:rules": "gulp vw2px --src ./services/rules/src",
+    "px2vw:rules": "gulp px2vw --src ./services/rules/src --rootWidthDesktop 1920",
+    "vw2px:rules": "gulp vw2px --src ./services/rules/src --rootWidthDesktop 1920",
     "px2vw:system": "gulp px2vw --src ./services/syatem/src",
     "vw2px:syatem": "gulp vw2px --src ./services/syatem/src",
     "px2vw:this": "gulp px2vw --src ./docs",
