--- a/package.json
+++ b/package.json
@@ -22,6 +22,27 @@
     "build:service": "nodemon --config nodemon.service.json esbuild.config.mjs",
     "test": "node tests",
     "================== CSS ==================": "echo NODE",
+    "================== SMALL ==================": "echo NODE",
+    "px2vw:checklist:375": "gulp px2vw --src ./services/checklist/src --rootWidthDesktop 375 --media small",
+    "vw2px:checklist:375": "gulp vw2px --src ./services/checklist/src --rootWidthDesktop 375 --media small",
+    "px2vh:checklist:812": "gulp px2vh --src ./services/checklist/src --rootWidthDesktop 812 --media small",
+    "vh2px:checklist:812": "gulp vh2px --src ./services/checklist/src --rootWidthDesktop 812 --media small",
+    "================== MEDIUM ==================": "echo NODE",
+    "px2vw:checklist:428": "gulp px2vw --src ./services/checklist/src --rootWidthDesktop 428 --media medium",
+    "vw2px:checklist:428": "gulp vw2px --src ./services/checklist/src --rootWidthDesktop 428 --media medium",
+    "px2vh:checklist:926": "gulp px2vh --src ./services/checklist/src --rootWidthDesktop 926 --media medium",
+    "vh2px:checklist:926": "gulp vh2px --src ./services/checklist/src --rootWidthDesktop 926 --media medium",
+    "================== TABLET ==================": "echo NODE",
+    "px2vw:checklist:960": "gulp px2vw --src ./services/checklist/src --rootWidthDesktop 960 --media tablet",
+    "vw2px:checklist:960": "gulp vw2px --src ./services/checklist/src --rootWidthDesktop 960 --media tablet",
+    "px2vh:checklist:1200": "gulp px2vh --src ./services/checklist/src --rootWidthDesktop 1200 --media tablet",
+    "vh2px:checklist:1200": "gulp vh2px --src ./services/checklist/src --rootWidthDesktop 1200 --media tablet",
+    "================== DESKTOP ==================": "echo NODE",
+    "px2vw:checklist:1920": "gulp px2vw --src ./services/checklist/src --rootWidthDesktop 1920 --media desktop",
+    "vw2px:checklist:1920": "gulp vw2px --src ./services/checklist/src --rootWidthDesktop 1920 --media desktop",
+    "px2vh:checklist:1080": "gulp px2vh --src ./services/checklist/src --rootWidthDesktop 1080 --media desktop",
+    "vh2px:checklist:1080": "gulp vh2px --src ./services/checklist/src --rootWidthDesktop 1080 --media desktop",
+    "================== END ==================": "echo NODE",
     "px2vw:welcomebook": "gulp px2vw --src ./services/welcomebook/src",
     "vw2px:welcomebook": "gulp vw2px --src ./services/welcomebook/src",
     "px2vw:rules": "gulp px2vw --src ./services/rules/src --rootWidthDesktop 1920",
