--- a/package.json
+++ b/package.json
@@ -42,11 +42,15 @@
     "vw2px:checklist:1920": "gulp vw2px --src ./services/checklist/src --rootWidthDesktop 1920 --media desktop",
     "px2vh:checklist:1080": "gulp px2vh --src ./services/checklist/src --rootWidthDesktop 1080 --media desktop",
     "vh2px:checklist:1080": "gulp vh2px --src ./services/checklist/src --rootWidthDesktop 1080 --media desktop",
+    "====================================": "echo NODE",
+    "================== RULES DESKTOP ==================": "echo NODE",
+    "px2vw:rules:1920": "gulp px2vw --src ./services/rules/src --rootWidthDesktop 1920 --media desktop",
+    "vw2px:rules:1920": "gulp vw2px --src ./services/rules/src --rootWidthDesktop 1920 --media desktop",
+    "px2vh:rules:1080": "gulp px2vh --src ./services/rules/src --rootWidthDesktop 1080 --media desktop",
+    "vh2px:rules:1080": "gulp vh2px --src ./services/rules/src --rootWidthDesktop 1080 --media desktop",
     "================== END ==================": "echo NODE",
     "px2vw:welcomebook": "gulp px2vw --src ./services/welcomebook/src",
     "vw2px:welcomebook": "gulp vw2px --src ./services/welcomebook/src",
-    "px2vw:rules": "gulp px2vw --src ./services/rules/src --rootWidthDesktop 1920",
-    "vw2px:rules": "gulp vw2px --src ./services/rules/src --rootWidthDesktop 1920",
     "px2vw:system": "gulp px2vw --src ./services/system/src --rootWidthDesktop 1920",
     "vw2px:system": "gulp vw2px --src ./services/system/src --rootWidthDesktop 1920",
     "px2vw:this": "gulp px2vw --src ./docs",
