--- a/package.json
+++ b/package.json
@@ -27,21 +27,29 @@
     "vw2px:checklist:375": "gulp vw2px --src ./services/checklist/src --rootWidthDesktop 375 --media small",
     "px2vh:checklist:812": "gulp px2vh --src ./services/checklist/src --rootWidthDesktop 812 --media small",
     "vh2px:checklist:812": "gulp vh2px --src ./services/checklist/src --rootWidthDesktop 812 --media small",
+    "px2rem:checklist:375": "gulp px2rem --src ./services/checklist/src --rootWidthDesktop 375 --media small",
+    "rem2px:checklist:375": "gulp rem2px --src ./services/checklist/src --rootWidthDesktop 375 --media small",
     "================== MEDIUM ==================": "echo NODE",
     "px2vw:checklist:428": "gulp px2vw --src ./services/checklist/src --rootWidthDesktop 428 --media medium",
     "vw2px:checklist:428": "gulp vw2px --src ./services/checklist/src --rootWidthDesktop 428 --media medium",
     "px2vh:checklist:926": "gulp px2vh --src ./services/checklist/src --rootWidthDesktop 926 --media medium",
     "vh2px:checklist:926": "gulp vh2px --src ./services/checklist/src --rootWidthDesktop 926 --media medium",
+    "px2rem:checklist:428": "gulp px2rem --src ./services/checklist/src --rootWidthDesktop 428 --media medium",
+    "rem2px:checklist:428": "gulp rem2px --src ./services/checklist/src --rootWidthDesktop 428 --media medium",
     "================== TABLET ==================": "echo NODE",
     "px2vw:checklist:960": "gulp px2vw --src ./services/checklist/src --rootWidthDesktop 960 --media tablet",
     "vw2px:checklist:960": "gulp vw2px --src ./services/checklist/src --rootWidthDesktop 960 --media tablet",
     "px2vh:checklist:1200": "gulp px2vh --src ./services/checklist/src --rootWidthDesktop 1200 --media tablet",
     "vh2px:checklist:1200": "gulp vh2px --src ./services/checklist/src --rootWidthDesktop 1200 --media tablet",
+    "px2rem:checklist:960": "gulp px2rem --src ./services/checklist/src --rootWidthDesktop 960 --media tablet",
+    "rem2px:checklist:960": "gulp rem2px --src ./services/checklist/src --rootWidthDesktop 960 --media tablet",
     "================== DESKTOP ==================": "echo NODE",
     "px2vw:checklist:1920": "gulp px2vw --src ./services/checklist/src --rootWidthDesktop 1920 --media desktop",
     "vw2px:checklist:1920": "gulp vw2px --src ./services/checklist/src --rootWidthDesktop 1920 --media desktop",
     "px2vh:checklist:1080": "gulp px2vh --src ./services/checklist/src --rootWidthDesktop 1080 --media desktop",
     "vh2px:checklist:1080": "gulp vh2px --src ./services/checklist/src --rootWidthDesktop 1080 --media desktop",
+    "px2rem:checklist:1080": "gulp px2rem --src ./services/checklist/src --rootWidthDesktop 1080 --media desktop",
+    "rem2px:checklist:1080": "gulp rem2px --src ./services/checklist/src --rootWidthDesktop 1080 --media desktop",
     "====================================": "echo NODE",
     "================== RULES DESKTOP ==================": "echo NODE",
     "px2vw:rules:1920": "gulp px2vw --src ./services/rules/src --rootWidthDesktop 1920 --media desktop",
@@ -144,6 +152,7 @@
     "graphql-metrics": "^1.0.2",
     "jira-client": "^8.2.2",
     "nodemailer": "^6.9.4",
+    "ora": "^7.0.1",
     "pm2": "^5.3.0",
     "vfile": "^6.0.1"
   },
